--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,10 @@ after_success:
   - docker build -t abdullmm/multi-nginx ./nginx
   - docker build -t abdullmm/multi-server ./server
   - docker build -t abdullmm/multi-worker ./worker
+  # Log in to the docker CLI
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  # Take those images and push them to docker hub
+  - docker push abdullmm/multi-client
+  - docker push abdullmm/multi-nginx
+  - docker push abdullmm/multi-server
+  - docker push abdullmm/multi-worker
