--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:16-alpine as builder
 WORKDIR '/app'
-COPY ./PACKAGE.JSON ./
+COPY ./package.json ./
 RUN npm install
 COPY . .
 RUN npm run build
